themes/timdunklee/source/assets/scss/_variables.scss
//Compiled into application.scss
// --- All variables will go here


//Font Stuff
$strongFont : 'Oswald', sans-serif;
$mainFont : 'Quattrocento', serif;
//$cursiveFont : 'Pacifico', cursive;


//Base Units
$base-unit : 1rem;
$half-unit : 0.5rem;


//Colors
$white : #fff;
$grayLight: #f0f1ef;
$grayMedium: #95988d;
$grayDark: #333333;
$lightBlue: #366fa3;

$color-text-primary: $grayDark;
$color-text-secondary: $lightBlue;

//Root Variables
:root {
  --hero-bg-img: url('/assets/images/bg-hero-winter.jpg');
  --hero-bg-color: $white;
  --hero-heading-color: $grayDark;
  --heading-color: $grayDark;
  --heading-accent-color: $grayMedium;
  --text-color: $grayDark;
  --link-color: $lightBlue;
  --minimal-header-bg: $grayDark;
  --minimal-header-accent: $lightBlue;
  --social-icon-color: $grayDark;
  --social-icon-color-hover: lighten($grayDark, 10%);
  --footer-color: $grayDark;
}

//Themes
:root.theme-summer {
  --hero-bg-img: url('/assets/images/bg-hero-summer.jpg');
  --hero-bg-color: #3D445D;
  --hero-heading-color: $white;
  --heading-color: #3D445D;
  --heading-accent-color: #DD6D60;
  --text-color: #3D445D;
  --link-color: #DD6D60;
  --minimal-header-bg: #3D445D;
  --minimal-header-accent: #DD6D60;
  --social-icon-color: #3D445D;
  --social-icon-color-hover: lighten(#3D445D, 10%);
  --footer-color: #3D445D;
}

//Z-index Tracking
$zindex-theme-switcher: 100;

//Mixins and Stuff
@mixin breakpoint($point) {
  @if $point == large-fry {
    @media (min-width: 900px) { @content; }
  }

  @else if $point == small-fry {
    @media (min-width: 600px)  { @content; }
  }
}

@mixin clearfix() {
  *zoom: 1;
  &:before,
  &:after {
    display: table;
    content: "";
  }
  &:after {
    clear: both;
  }
}

